Added info.yml files to albums, so that the title can be changed and a description can be added. Cleaned up README/comments to make things clearer.

--- a/css/lib/layout.css
+++ b/css/lib/layout.css
@@ -33,6 +33,11 @@ body					{ background: #FFF;}
 #controls span#home a			{ width: 31px; background-position: -38px 0;}
 #controls span#overview a	{ width: 33px; background-position: -69px 0;}
 #controls span#next a			{ width: 36px; background-position: -102px 0;}
+/* Album
+/////////////////////////////////////////////////////////////////*/
+#description {
+  margin-top: 22px;
+}
 /* jcarousel
 /////////////////////////////////////////////////////////////////*/
 .jcarousel-container {
